# EjetSystemsCpp

./: .clang-format  .gitattributes  CMakeLists.txt  readme.md  vcpkg.json
scripts/: convert_weights.py
src/: main.cpp
src/Assets/Images/: ouroborosIcon.h  overhead.h
src/Backend/Application/: Application.cpp  Application.hpp
src/Backend/ImGuiTheme/: ImGuiTheme.cpp  ImGuiTheme.hpp
src/Backend/Image/: Image.cpp  Image.hpp
src/Backend/Layer/: Layer.hpp
src/Backend/UiHelpers/: UiHelpers.cpp  UiHelpers.hpp
src/Backend/VulkanManager/: VulkanManager.hpp
src/Systems/E170Systems/: E170Systems.cpp  E170Systems.hpp
src/Systems/Electrical/: Electrical.cpp  Electrical.hpp
src/Systems/Electrical/Busses/: Busses.hpp
src/Systems/Electrical/Components/: Battery.h  CircuitBreaker.cpp  CircuitBreaker.hpp  ElectricalComponent.hpp  GenericAcComponent.cpp  GenericAcComponent.hpp  GenericDcComponent.cpp  GenericDcComponent.hpp  Wire.cpp  Wire.hpp
src/Systems/Electrical/ElectricalUtil/: ElectricalUtil.hpp
src/Systems/Hydraulic/: Hydraulic.cpp  Hydraulic.hpp
src/Systems/Hydraulic/Components/: Accumulator.cpp  Accumulator.hpp  Actuator.hpp  FilterManifold.cpp  FilterManifold.hpp  Fluid.cpp  Fluid.hpp  HydraulicComponents.hpp  HydraulicLine.hpp  Math.hpp  Pump.cpp  Pump.hpp  Reservoir.cpp  Reservoir.hpp
src/Systems/Shared/: State.hpp  SystemStruct.hpp
src/Systems/State/: State.hpp
src/Systems/System/: System.hpp
src/Systems/SystemsMain/: SystemsMain.hpp
src/Util/DeltaTime/: DeltaTime.cpp  DeltaTime.hpp
src/Util/VirtualCockpit/: VirtualCockpit.cpp  VirtualCockpit.hpp
src/Util/VirtualCockpit/Components/CircuitBreakerUI/: CircuitBreakerUI.hpp
src/Util/VirtualCockpit/Components/IlluminatedButton/: IlluminatedButton.hpp
src/Util/VirtualCockpit/Components/MultiPositionKnob/: MultiPositionKnob.hpp
src/Util/VirtualCockpit/Components/MultiPositionSwitch/: MultiPositionSwitch.hpp
src/Util/VirtualCockpit/Components/Slider/: Slider.hpp
src/Util/VirtualCockpit/Components/Throttle/: Throttle.hpp
src/Util/Weights/: Weights.cpp  Weights.hpp
